--- a/404.html
+++ b/404.html
@@ -15,12 +15,8 @@
 <script>
   // ---- DEFINE YOUR SHORT LINKS HERE ----
   const routes = {
-    "": "https://vdsai.se",                                // root → homepage
-    "meet": "https://vdsai.se/meet?utm_source=email&utm_medium=outreach&utm_campaign=discovery",
-    "form": "https://formular.vdsai.se",
-    "site": "https://vdsai.se",
-    "calendar": "https://cal.com/your-handle"
-    // add more: "slug": "https://target.url"
+    "":     "https://vdsai.se",  // root → homepage
+    "meet": "https://vdsai.se/meet?utm_source=email&utm_medium=outreach&utm_campaign=discovery"
   };
 
   function trimSlashes(s){ return (s||"/").replace(/^\/+|\/+$/g,""); }
