--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
   // ---- DEFINE YOUR SHORT LINKS HERE ----
   const routes = {
     "":     "https://vdsai.se",  // root → homepage
-    "meet": "https://vdsai.se/meet?utm_source=email&utm_medium=outreach&utm_campaign=discovery"
+    "meet": "https://vdsai.se"
   };
 
   function trimSlashes(s){ return (s||"/").replace(/^\/+|\/+$/g,""); }
