--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting…</title>
-<meta name="robots" content="noindex,nofollow">
-<meta name="referrer" content="no-referrer">
-
-<script>
-  // Change this target if needed:
-  // Example for vdsai.se/meet → go.vdsai.se/meet (keeps ?cid=... and #...)
-  var target = "https://go.vdsai.se/meet" + location.search + location.hash;
-  location.replace(target);
-</script>
-
-<noscript>
-  <!-- JS-off fallback (doesn't preserve query/hash) -->
-  <meta http-equiv="refresh" content="0; url=https://go.vdsai.se/meet">
-  <p><a href="https://go.vdsai.se/meet">Redirecting…</a></p>
-</noscript>
+<title>go.vdsai.se</title>
+<meta http-equiv="refresh" content="0; url=/">
+<p><a href="/">Redirecting…</a></p>
