--- a/404.html
+++ b/404.html
@@ -1,34 +1,51 @@
 <!doctype html>
-<meta charset="utf-8">
-<title>Redirecting…</title>
-<meta name="referrer" content="no-referrer-when-downgrade">
-<style>
-  body { font: 14px/1.5 system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 3rem; color: #333; }
-  .box { max-width: 640px; }
-  .muted { color: #777; font-size: 12px; }
-</style>
-<div class="box">
-  <h1>Redirecting…</h1>
-  <p>If you are not redirected automatically, <a id="manual" href="#">click here</a>.</p>
-  <p class="muted">go.vdsai.se</p>
-</div>
-<script>
-  // ---- SHORT SLUGS → DESTINATIONS ----
-  const routes = {
-    "":     "https://vdsai.se",   // root → homepage
-    "meet": "https://vdsai.se"    // temp target (we can change later)
-  };
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Redirecting…</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  function trimSlashes(s){ return (s||"/").replace(/^\/+|\/+$/g,""); }
-  const slug = trimSlashes(location.pathname);
-  const base = Object.prototype.hasOwnProperty.call(routes, slug) ? routes[slug] : routes[""];
+  <!-- Keep go. out of search results -->
+  <meta name="robots" content="noindex,nofollow">
 
-  // Preserve all incoming query params (?cid=..., UTMs, etc.)
-  const incoming = (location.search || "").replace(/^\?/, "");
-  const target = incoming ? (base + (base.includes("?") ? "&" : "?") + incoming) : base;
+  <!-- Point any residual signals to your main site -->
+  <link rel="canonical" href="https://vdsai.se/">
 
-  // Manual link + redirect
-  document.getElementById?.("manual")?.setAttribute("href", target);
-  try { window.location.replace(target); } catch { window.location.href = target; }
-</script>
+  <!-- Referrer policy: send referrer on HTTPS→HTTPS (fine for your own domain) -->
+  <meta name="referrer" content="no-referrer-when-downgrade">
 
+  <style>
+    body { font: 14px/1.5 system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; margin: 3rem; color: #333; }
+    .box { max-width: 640px; }
+    .muted { color: #777; font-size: 12px; }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <h1>Redirecting…</h1>
+    <p>If you are not redirected automatically, <a id="manual" href="#">click here</a>.</p>
+    <p class="muted">go.vdsai.se</p>
+  </div>
+
+  <script>
+    // ---- SHORT SLUGS → DESTINATIONS ----
+    const routes = {
+      "":     "https://vdsai.se",   // root → homepage
+      "meet": "https://vdsai.se"    // temp target (adjust as needed)
+    };
+
+    function trimSlashes(s){ return (s||"/").replace(/^\/+|\/+$/g,""); }
+    const slug = trimSlashes(location.pathname);
+    const base = Object.prototype.hasOwnProperty.call(routes, slug) ? routes[slug] : routes[""];
+
+    // Preserve all incoming query params (?cid=..., UTMs, etc.)
+    const incoming = (location.search || "").replace(/^\?/, "");
+    const target = incoming ? (base + (base.includes("?") ? "&" : "?") + incoming) : base;
+
+    // Manual link + redirect
+    const a = document.getElementById("manual");
+    if (a) a.setAttribute("href", target);
+    try { window.location.replace(target); } catch { window.location.href = target; }
+  </script>
+</body>
+</html>
